HVAC Backup 2/objects/Part_Replace__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Part Replace</relationshipLabel>
        <relationshipName>Part_Replace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOM_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM Item</label>
        <referenceTo>BOM_Item__c</referenceTo>
        <relationshipLabel>Part Replace</relationshipLabel>
        <relationshipName>Part_Replace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Serial_Number__c</fullName>
        <label>New Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Serial_Number__c</fullName>
        <label>Old Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Part Replace</relationshipLabel>
        <relationshipName>Part_Replace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Part Replace</relationshipLabel>
        <relationshipName>Part_Replace</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spare__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spare</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Part Replace</relationshipLabel>
        <relationshipName>Part_Replace</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Part Replace</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BOM_Item__c</columns>
        <columns>Old_Serial_Number__c</columns>
        <columns>New_Serial_Number__c</columns>
        <columns>Service_Ticket__c</columns>
        <columns>Service_Ticket_Line_Item__c</columns>
        <columns>Spare__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Part Replace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Replace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>